# Markliu2026.github.io

./: index.html  scenario-review.html
.github/workflows/: update-profile.yml
FDE_RE/: FDE宣讲手册.html  SAP数智工程师场景提报与评审系统设计.md  SAP顾问转FDE_制造业AI高ROI场景宣讲与岗位手册.md  场景提交评审系统.html
FDE_RE/scenario-review/: .env.docker.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
FDE_RE/scenario-review/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
FDE_RE/scenario-review/backend/app/: config.py  database.py  main.py  seed.py
FDE_RE/scenario-review/backend/app/api/: deep_eval.py  deps.py  incentive.py  meetings.py  poc.py  products.py  reviews.py  scenarios.py  stats.py  users.py
FDE_RE/scenario-review/backend/app/models/: __init__.py  base.py  deep_eval.py  enums.py  incentive.py  meeting.py  poc.py  product.py  review.py  user.py
FDE_RE/scenario-review/backend/app/schemas/: phase2.py  review.py  scenario.py
FDE_RE/scenario-review/backend/app/services/: incentive.py  roi.py  state_machine.py
FDE_RE/scenario-review/backend/tests/: conftest.py  test_flow.py  test_unit.py
FDE_RE/scenario-review/frontend/: .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.mjs
FDE_RE/scenario-review/frontend/app/: globals.css  layout.tsx  page.tsx  (+1 more)
scenario-review/backend/: README.md
scenario-review/backend/app/: config.py  main.py  security.py
scenario-review/frontend/: next.config.ts  package-lock.json  package.json
scenario-review/frontend/components/: Badges.tsx  Nav.tsx
scripts/: update_profile.py
(+32 files in other folders)
